# scherzo

./: .gitignore  .travis.yml  Makefile
android/: .gitignore  build.gradle
android/app/: .gitignore  CMakeLists.txt  build.gradle  debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: scherzo-lib.c
android/app/src/main/java/com/naivesound/scherzo/: App.java  App.kt  MainActivity.java  MainActivity.kt  MidiKeyView.java  MidiKeyView.kt  PianoKeyboard.java  PianoKeyboard.kt  Scherzo.java  Scherzo.kt  ScherzoService.java  ScherzoService.kt  ScherzoView.java  ScherzoView.kt
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
core/: CMakeLists.txt  scherzo.c  scherzo.h
core/fluidsynth/: fluid_config.h  fluid_conv.c  fluid_conv.h  fluid_defsfont.c  fluid_defsfont.h  fluid_gen.c  fluid_midi.h  fluid_mod.c  fluid_mod.h  fluid_ramsfont.c  fluid_ramsfont.h  fluid_rev.c  fluid_settings.h  fluid_synth.c  fluid_tuning.h  fluid_voice.c  fluid_voice.h  fluidsynth_priv.h  stb_vorbis.h
desktop/: CMakeLists.txt  main.cpp
src/: m.h  main.cpp  scherzo.c  scherzo.h
web/: index.html  scherzo.js  styles.css
